# thaw-cli

./: Cargo.toml  LICENSE  README.md
crates/thaw_cli/: Cargo.toml
crates/thaw_cli/src/: cli.rs  config.rs  constants.rs  context.rs  env.rs  lib.rs  logger.rs  main.rs
crates/thaw_cli/src/cli/: message.rs
crates/thaw_cli/src/client/: client.js
crates/thaw_cli/src/commands/: build.rs  mod.rs  serve.rs
crates/thaw_cli/src/commands/serve/: common.rs  csr.rs  mod.rs  ssr.rs  watch.rs
crates/thaw_cli/src/config/: default.rs  mod.rs
crates/thaw_cli/src/dx/: assets.rs
crates/thaw_cli/src/plugins/: html.rs  mod.rs
crates/thaw_cli/src/server/: csr.rs  csr_app.rs  mod.rs  open_browser.rs  ssr.rs  ssr_app.rs  ws.rs
crates/thaw_cli/src/server/middlewares/: index_html.rs  mod.rs  proxy.rs
crates/thaw_cli/src/utils/: client.rs  copy_dir_all.rs  dot_eyre.rs  fs.rs  mod.rs  wasm_opt.rs
examples/start_axum/: Cargo.toml  README.md
examples/start_axum/src/: app.rs  main.rs
examples/start_trunk/: Cargo.toml  README.md  Thaw.toml  index.html
examples/start_trunk/src/: lib.rs  main.rs
