[package]
name = "thaw_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen-cli-support = "0.2.100"

clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
anyhow = "1.0"
xshell = "0.2"

toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cargo-manifest = "0.19"

axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }

notify = "8.0"

[[bin]]
name = "thaw"
path = "src/main.rs"
