[package]
name = "thaw_cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
keywords = ["leptos", "cli", "thaw"]
authors = ["lizidev"]
description = "Build tool for Leptos."
homepage = "https://github.com/thaw-ui/thaw-cli"
repository = "https://github.com/thaw-ui/thaw-cli"
license = "MIT"

[dependencies]
wasm-bindgen-cli-support = "0.2.100"

clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
anyhow = "1.0"
crossterm = "0.29"
dotenvy = "0.15.7"

toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

cargo-manifest = "0.19"
cargo_metadata = "0.20"

axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.15"
hyper = "1.6"
hyper-util = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-full"] }
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"

notify-debouncer-full = "0.5"
dirs = "6.0"
which = "8.0"
tar = "0.4"
flate2 = "1.1"
chrono = "0.4.41"
open = "5.3"

dioxus-cli-opt = "=0.7.0-alpha.3"
manganis = "=0.7.0-alpha.3"
const-serialize = "=0.7.0-alpha.3"
object = { version = "0.37.1", features = ["all"] }
pdb = "0.8.0"
walrus = { version = "0.23.3", features = ["parallel"] }
wasmparser = "0.235.0"
rayon = "1.10.0"
[[bin]]
name = "thaw"
path = "src/main.rs"
